Fix backspacing between paragraphs

--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,8 @@ body {
 
 .para {
   position: relative;
+  margin-bottom: 10px;
+  min-height: 1em;
 }
 
 #cursor {
@@ -22,4 +24,11 @@ body {
   height: 18px;
   background-color: black;
   top: 0;
+}
+
+#measure-text {
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  color: gray;
 }
